Adding the problem statements.

--- a/prologin/documents/prologin-letter.sty
+++ b/prologin/documents/prologin-letter.sty
@@ -27,7 +27,7 @@ Tél. : 01 44 08 01 90 --- E-mail : \url{info@prologin.org} --- \url{http://www.
 
 \vspace{0.5cm}
 
-\hspace{9.5cm}Paris, le vendredi \today
+\hspace{9.5cm}Paris, le \today
 
 \vspace{1cm}
 
