Documents: reworked TeX templates, implemented userlist, convoc, interviews

--- a/prologin/documents/tex_templates/prologin-letter.sty
+++ b/prologin/documents/tex_templates/prologin-letter.sty
@@ -19,9 +19,9 @@
 
 \cfoot{\footnotesize Association \textsc{Prologin}\\
 14 -- 16 rue Voltaire --- 94270 Le Kremlin-Bicêtre --- France\\
-Tél. : 01 44 08 01 90 --- E-mail : \url{info@prologin.org} --- \url{http://www.prologin.org}}
+Tél.: 01 44 08 01 90 --- E-mail: \url{info@prologin.org} --- \url{http://www.prologin.org}}
 
-\def\header{\includegraphics[width=0.5\textwidth]{logo}
+\def\header{%\includegraphics[width=0.5\textwidth]{res/logo}
 
 \hspace{9.5cm}\parbox{6.5cm}{\destinataire}
 
@@ -31,8 +31,8 @@ Tél. : 01 44 08 01 90 --- E-mail : \url{info@prologin.org} --- \url{http://www.
 
 \vspace{1cm}
 
-\noindent\textbf{\underline{Objet :} \objet}}
+\noindent\textbf{\underline{Objet:} \objet}}
 
-\def\signature{\vspace{1cm}\hspace{10cm}\parbox{5cm}{Pour l'équipe Prologin,\\
-\includegraphics[width=36mm]{signature.pdf}\\
-Le président, Jill-Jênn \textsc{Vie}}}
+\def\signature{\vspace{1cm}\hspace{8cm}\parbox{7cm}{Pour l'équipe Prologin,\\
+%\includegraphics[width=36mm]{res/signature}\\
+Le vice-président, Antoine \textsc{Pietri}}}
