--- a/prologin/documents/templates/documents/convocation-regionale.tex
+++ b/prologin/documents/templates/documents/convocation-regionale.tex
@@ -1,20 +1,22 @@
+{% load i18n latex %}{% autoescape off %}
 \documentclass[a4paper,11pt]{article}
 \usepackage{prologin-letter}
 
-\def\objet{Convocation aux épreuves régionales de Prologin #YEAR#}
-
 \begin{document}
 
-% \convocation definition HAS to be AFTER \begin{document}
-% for babel transformations to work
+\def\objet{Convocation aux épreuves régionales de Prologin {{ year|escapetex }} }
 
-\newcommand\convocation[9]{
-\def\destinataire{#1 #2\\
-#3\\
-#4 #5}
+{% for item in items %}
+{% with event=item.event center=item.event.center user=item.contestant.user %}
+
+\def\destinataire{%
+{{ user.get_full_name|escapetex|nonempty }}\\
+{{ user.address|escapetex|nonempty }}\\
+{{ user.postal_code|escapetex|nonempty }} {{ user.city|escapetex|nonempty }}%
+}
 \header
 
-Bonjour #1,
+Bonjour {{ user.first_name|escapetex }},
 
 Nous avons le plaisir de vous informer que vous êtes sélectionné
 pour la phase des épreuves régionales du concours Prologin 2013.
@@ -22,13 +24,19 @@ Comme vous nous l'avez demandé, votre épreuve aura lieu à:
 
 {\par\smallskip\noindent\centering
 \begin{minipage}{0.5\textwidth}
-\textbf{#7}\\
-\textbf{#8}\\
-\textbf{#9}
+\textbf{%
+{{ center.name|escapetex|nonempty }}%
+}\\
+\textbf{%
+{{ center.address|escapetex|nonempty }}%
+}\\
+\textbf{%
+{{ center.postal_code|escapetex|nonempty }} {{ center.city|escapetex|nonempty }}%
+}
 \end{minipage}
 \par\smallskip}
 
-L'équipe de Prologin vous donne donc rendez-vous le #6
+L'équipe de Prologin vous donne donc rendez-vous le {{ event.date_begin|date:"l d F Y"|escapetex }}
 à partir de 8~h~45 (début des épreuves à 9~heures). Nous vous demandons
 de bien vouloir vous munir d'\textbf{une pièce d'identité et de cette convocation}.
 
@@ -45,8 +53,10 @@ Nous restons à votre disposition pour toutes questions, n'hésitez pas
 à nous contacter.
 
 \signature
-\newpage}
+\newpage
 
+{% endwith %}
+{% endfor %}
 
-#BODY#
 \end{document}
+{% endautoescape %}
