--- a/prologin/documents/templates/documents/prologin-letter.sty
+++ b/prologin/documents/templates/documents/prologin-letter.sty
@@ -19,7 +19,7 @@
 
 \cfoot{\footnotesize Association \textsc{Prologin}\\
 14 -- 16 rue Voltaire --- 94270 Le Kremlin-Bicêtre --- France\\
-Tél.: 01 44 08 01 90 --- E-mail: \url{info@prologin.org} --- \url{http://www.prologin.org}}
+Tél.~: 01 44 08 01 90 --- E-mail~: \url{info@prologin.org} --- \url{http://www.prologin.org}}
 
 \def\header{%\includegraphics[width=0.5\textwidth]{res/logo}
 
@@ -31,7 +31,7 @@ Tél.: 01 44 08 01 90 --- E-mail: \url{info@prologin.org} --- \url{http://www.pr
 
 \vspace{1cm}
 
-\noindent\textbf{\underline{Objet:} \objet}}
+\noindent\textbf{\underline{Objet~:} \objet}}
 
 \def\signature{\vspace{1cm}\hspace{8cm}\parbox{7cm}{Pour l'équipe Prologin,\\
 %\includegraphics[width=36mm]{res/signature}\\
