--- a/prologin/locale/fr/LC_MESSAGES/django.po
+++ b/prologin/locale/fr/LC_MESSAGES/django.po
@@ -15,7 +15,7 @@ msgstr ""
 "Project-Id-Version: Prologin website\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-10-19 20:40+0200\n"
-"PO-Revision-Date: 2015-10-19 18:44+0000\n"
+"PO-Revision-Date: 2015-10-19 18:52+0000\n"
 "Last-Translator: Antoine Pietri <antoine.pietri1@gmail.com>\n"
 "Language-Team: French (http://www.transifex.com/prologin/prologin-site/language/fr/)\n"
 "MIME-Version: 1.0\n"
@@ -125,7 +125,7 @@ msgstr ""
 
 #: contest/forms.py:52
 msgid "Semifinal center wishes"
-msgstr "Centres de régionale"
+msgstr "Choix de centres d'examen pour les épreuves régionales"
 
 #: contest/forms.py:53
 msgid ""
@@ -507,7 +507,7 @@ msgstr "Finale"
 msgid ""
 "You have one weekend to develop an Artificial Intelligence for a custom-made"
 " game, in Paris."
-msgstr "Développement d'une IA pendant un week-end, à Paris."
+msgstr "Développement d'une Intelligence Artificielle pour un jeu multi-joueur pendant un week-end, à Paris."
 
 #: homepage/templates/homepage/sponsors.html:10
 msgid "Sponsors"
@@ -861,7 +861,7 @@ msgstr "Pour un planning détaillé des événements de cette année, consultez 
 
 #: pages/templates/pages/about-contest.html:33
 msgid "1<sup>st</sup> step – Qualification"
-msgstr "1<sup>ère</sup> étape – Séléction"
+msgstr "1<sup>e</sup> étape – Sélection"
 
 #: pages/templates/pages/about-contest.html:34
 msgid ""
@@ -898,7 +898,7 @@ msgstr "En savoir plus"
 
 #: pages/templates/pages/about-contest.html:52
 msgid "2<sup>nd</sup> step – Semifinals"
-msgstr "2<sup>ème</sup> étape – Les demi-finales"
+msgstr "2<sup>e</sup> étape – Les demi-finales"
 
 #: pages/templates/pages/about-contest.html:53
 msgid ""
@@ -925,7 +925,7 @@ msgstr "\nNous organisons l'événement dans plusieurs grandes villes de France 
 
 #: pages/templates/pages/about-contest.html:77
 msgid "3<sup>rd</sup> step – The Final"
-msgstr "3<sup>ème</sup> étape – La finale"
+msgstr "3<sup>e</sup> étape – La finale"
 
 #: pages/templates/pages/about-contest.html:78
 msgid ""
@@ -1231,7 +1231,7 @@ msgstr "<p class=\"text-justify\">Il existe divers moyens de contribuer&nbsp;: p
 #: pages/templates/pages/about-qualification.html:12
 #: pages/templates/pages/about-qualification.html:18
 msgid "The qualification stage"
-msgstr "L'étape de séléction"
+msgstr "L'étape de sélection"
 
 #: pages/templates/pages/about-qualification.html:22
 msgid ""
