--- a/prologin/locale/fr/LC_MESSAGES/django.po
+++ b/prologin/locale/fr/LC_MESSAGES/django.po
@@ -15,8 +15,8 @@ msgstr ""
 "Project-Id-Version: Prologin website\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-10-19 20:40+0200\n"
-"PO-Revision-Date: 2015-10-19 18:55+0000\n"
-"Last-Translator: Antoine Pietri <antoine.pietri1@gmail.com>\n"
+"PO-Revision-Date: 2015-10-20 13:28+0000\n"
+"Last-Translator: Alexandre Macabies <web+transifex@zopieux.com>\n"
 "Language-Team: French (http://www.transifex.com/prologin/prologin-site/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -456,7 +456,7 @@ msgstr "Date inconnue"
 #: homepage/templates/homepage/jumbotron.html:30
 #, python-format
 msgid "A quiz and %(problems_count)s problems to solve online."
-msgstr "Un QCM et %(problems_count)s à résoudre en ligne."
+msgstr "Un QCM et %(problems_count)s exercices à résoudre en ligne."
 
 #: homepage/templates/homepage/jumbotron.html:32
 #, python-format
@@ -1935,7 +1935,7 @@ msgstr "Code de la solution"
 
 #: problems/templates/problems/submission.html:81
 msgid "The compilation went fine."
-msgstr "La compilation a réussie."
+msgstr "La compilation a réussi."
 
 #: problems/templates/problems/submission.html:83
 msgid "The compilation failed:"
