locale: update typo

--- a/prologin/locale/fr/LC_MESSAGES/django.po
+++ b/prologin/locale/fr/LC_MESSAGES/django.po
@@ -18,8 +18,8 @@ msgstr ""
 "Project-Id-Version: Prologin website\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-11-10 19:02+0100\n"
-"PO-Revision-Date: 2015-11-10 18:03+0000\n"
-"Last-Translator: Alexandre Macabies <web+transifex@zopieux.com>\n"
+"PO-Revision-Date: 2015-11-12 21:22+0000\n"
+"Last-Translator: Antoine Pietri <antoine.pietri1@gmail.com>\n"
 "Language-Team: French (http://www.transifex.com/prologin/prologin-site/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2005,7 +2005,7 @@ msgid ""
 "Want to find out what the Prologin algorithmic exercises are like?\n"
 "In this section, you can browse and tackle all the problems from the previous Prologin events. These are\n"
 "problems from both the Prologin online qualifications and the on-site semifinals."
-msgstr "Vous voulez découvrir à quoi ressemblent les exercices d'algorithmiques de Prologin ? Dans cette section, vous pouvez parcourir les précédentes éditions du concours Prologin et vous entraîner sur tous les problèmes correspondants. Ces exercices proviennent des qualifications en ligne et des demi-finales."
+msgstr "Vous voulez découvrir à quoi ressemblent les exercices d'algorithmique de Prologin ? Dans cette section, vous pouvez parcourir les précédentes éditions du concours Prologin et vous entraîner sur tous les problèmes correspondants. Ces exercices proviennent des qualifications en ligne et des demi-finales."
 
 #: problems/templates/problems/index.html:56
 msgid "How does it work?"
